buildscript {
  repositories {
    mavenLocal()
    if (System.getenv('GG_REPO')?.trim()) maven { url System.getenv('GG_REPO') }
    mavenCentral()
  }
  dependencies {
    classpath "kz.greetgo.plugins:greetgo.gradle.plugins:0.0.2"
  }
}

plugins {
  id 'org.ajoberstar.grgit' version '2.1.0'
}
apply plugin: 'org.ajoberstar.grgit'

def nowDate = new Date()
def nowFormattedDate = nowDate.format("yyyy-MM-dd/HH:mm:ss")
def vendorName = "greetgo!"
def ggRepo = System.getenv('GG_REPO')

allprojects {
  apply plugin: 'java'
  apply plugin: 'maven'
  apply plugin: 'idea'
  //noinspection UnnecessaryQualifiedReference
  apply plugin: kz.greetgo.gradle.plugins.ShortJavaPathPlugin

  version = rootProject.file('version.txt').text.trim()

  sourceCompatibility = 1.8
  targetCompatibility = 1.8

  group = "kz.greetgo.util"

  repositories {
    mavenLocal()
    if (ggRepo?.trim()) maven { url ggRepo.trim() }
    jcenter()
  }
}

subprojects {
  dependencies {
    ext.servletApiVersion = '3.1.0'
    ext.assertjVersion = "3.12.2"

    testCompile 'org.testng:testng:6.5.1'
    testCompile "org.assertj:assertj-core:${assertjVersion}"
  }

  jar {
    manifest {
      attributes(
        'Specification-Title': project.name,
        'Specification-Version': version,
        'Specification-Vendor': vendorName,
        'Implementation-Version': grgit.head().id,
        'Created-By': System.getProperty("user.name"),
        'Created-At': nowFormattedDate
      )
    }
  }

  idea.module.downloadSources = true
  idea.module.downloadJavadoc = true
  idea.module.inheritOutputDirs = false
  idea.module.outputDir = file("$buildDir/classes/main/")
  idea.module.testOutputDir = file("$buildDir/classes/test/")
  
  //noinspection GroovyMissingReturnStatement
  test.useTestNG()
}
